test: added tests